<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:elevation="5dp"
          android:layout_margin="5dp"
          android:background="@color/yellow"

          android:layout_height="match_parent">
          <TextView
              android:layout_width="match_parent"
              android:text="@string/country_name"
              android:textSize="18sp"

              android:textColor="@color/colorBlack"
              android:id="@+id/country_name"
              android:textStyle="bold"
              android:background="@color/red"
              android:gravity="center"
              android:layout_height="wrap_content">
          </TextView>
          <TextView
              android:layout_width="match_parent"
              android:text="@string/totalNumberOfDeaths"
              android:textSize="18sp"
              android:textColor="@color/blue"
              android:textStyle="bold"
              android:gravity="center"
              android:layout_height="wrap_content">
          </TextView>

          <TextView
              android:layout_width="match_parent"
              android:text="@string/totalNumberOfDeaths"
              android:textSize="18sp"
              android:textColor="@color/red"
              android:id="@+id/totalNumberOfDeaths"
              android:textStyle="bold"
              android:gravity="center"
              android:layout_height="wrap_content">
          </TextView>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:orientation="horizontal">
              <com.google.android.material.card.MaterialCardView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_margin="5dp"
                  android:elevation="5dp"
                  android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cromeColor"
                            android:textSize="15sp"

                            android:text="@string/mainCardViewTotalCase"
                            android:layout_height="wrap_content">

                        </TextView>
                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:id="@+id/totalCase"
                            android:textStyle="bold"
                            android:textColor="@color/cromeColor"
                            android:textSize="15sp"
                            android:text="@string/mainCardViewTotalCase"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
              </com.google.android.material.card.MaterialCardView>
              <com.google.android.material.card.MaterialCardView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_margin="5dp"
                  android:elevation="5dp"
                  android:layout_height="wrap_content">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content">
                      <TextView
                          android:layout_width="match_parent"
                          android:gravity="center"
                          android:textStyle="bold"
                          android:textSize="15sp"
                          android:textColor="@color/red"

                          android:text="@string/totalDeaths"
                          android:layout_height="wrap_content">

                      </TextView>
                      <TextView
                          android:layout_width="match_parent"
                          android:gravity="center"
                          android:id="@+id/totalDeaths"
                          android:textStyle="bold"
                          android:textColor="@color/red"
                          android:textSize="15sp"
                          android:text="@string/mainCardViewTotalCase"
                          android:layout_height="wrap_content">

                      </TextView>
                  </LinearLayout>
              </com.google.android.material.card.MaterialCardView>



          </LinearLayout>


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:layout_marginBottom="5dp"
              android:orientation="horizontal">
              <com.google.android.material.card.MaterialCardView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:elevation="5dp"
                  android:layout_margin="5dp"
                  android:layout_height="wrap_content">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content">
                      <TextView
                          android:layout_width="match_parent"
                          android:gravity="center"
                          android:textStyle="bold"
                          android:textSize="15sp"
                          android:textColor="@color/green"
                          android:text="@string/totalRecovered"
                          android:layout_height="wrap_content">

                      </TextView>
                      <TextView
                          android:layout_width="match_parent"
                          android:gravity="center"
                          android:id="@+id/totalRecovered"
                          android:textStyle="bold"
                          android:textColor="@color/green"
                          android:textSize="15sp"
                          android:text="@string/mainCardViewTotalCase"
                          android:layout_height="wrap_content">

                      </TextView>
                  </LinearLayout>
              </com.google.android.material.card.MaterialCardView>
              <com.google.android.material.card.MaterialCardView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:elevation="5dp"
                  android:layout_margin="5dp"
                  android:layout_height="wrap_content">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content">
                      <TextView
                          android:layout_width="match_parent"
                          android:gravity="center"
                          android:textStyle="bold"
                          android:textSize="15sp"
                          android:textColor="@color/blue"

                          android:text="@string/totalActive"
                          android:layout_height="wrap_content">

                      </TextView>
                      <TextView
                          android:layout_width="match_parent"
                          android:gravity="center"
                          android:id="@+id/totalActive"
                          android:textStyle="bold"
                          android:textSize="15sp"
                          android:textColor="@color/blue"
                          android:text="@string/mainCardViewTotalCase"
                          android:layout_height="wrap_content">

                      </TextView>
                  </LinearLayout>
              </com.google.android.material.card.MaterialCardView>



          </LinearLayout>

      </LinearLayout>


</LinearLayout>